Tests/Runtime2/Error/InHandler/.build/outerhandler.pr
[
  {
    "name": "OuterHandler",
    "description": "Build goal OuterHandler step to mark outer error as handled.",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "set %outerHandled% = true",
        "lineNumber": 3,
        "indent": 0,
        "comment": "catches the propagated error from BadHandler",
        "actions": [
          {
            "module": "variable",
            "action": "set",
            "parameters": [
              {
                "name": "Name",
                "value": "%outerHandled%",
                "type": "string"
              },
              {
                "name": "Value",
                "value": true,
                "type": "bool"
              }
            ],
            "return": [],
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/OuterHandler.goal",
    "prPath": "/.build/outerhandler.pr",
    "hash": "6408d926d051e2348b13ffda7f9b733c1ed41db27e8ca3a7ffde98c7172e8c36",
    "builderVersion": "0.2.2",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]